# security-compliance-engineering-tools

./: README.md
01-aws-sg-dashboard/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  extract_and_visualize_v2.py  pyproject.toml  sg_dashboard_template.html
01-aws-sg-dashboard/tests/: conftest.py  test_partition.py  test_template_injection.py  test_vulnerability_detection.py
