[project]
name = "sg-dashboard"
version = "3.0.0"
description = "Interactive Security Group visualization dashboard for multi-account AWS environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["aws", "security-group", "dashboard", "steampipe", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]

[project.urls]
Repository = "https://github.com/zer0-kr/security-compliance-engineering-tools"
Issues = "https://github.com/zer0-kr/security-compliance-engineering-tools/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
